# Opengl-linux

./: CMakeLists.txt  ge_graph.c  gl_fly.c  gl_teapot.c  gl_transform.c  gl_vertex.c  gl_vertexcolor.c  main.cpp  test1.c  test2.c
leanopengl/: 1.10_camera.cpp  1.10_camera2.cpp  1.10_camera3.cpp  1.10_camera4.cpp  1.4_window.c  1.5_ractangle.c  1.5_triangle.c  1.5_triangle_exercise.c  1.6_shader_moreattr.c  1.6_shader_uniform.c  1.7_texture.c  1.7_texture2.c  1.7_texture2pp.cpp  1.8_coordinate1.cpp  1.8_coordinate2.cpp  1.8_coordinate3.cpp  1.8_glm.cpp  1.8_transform.cpp  1.9_coordinate.cpp  2.1_light.cpp  2.2_light.cpp  2.2_light2.cpp  2.2_light3.cpp  2.3_material.cpp  2.3_material2.cpp  2.4_texture.cpp  2.4_texture2.cpp  2.4_texture3.cpp  3.1_assimp.cpp  3.2_load_file_test.cpp  3.3_model_loading.cpp  3.3_simple_load.cpp  opengl_info.c  template.c  template.cpp
